--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/inspectionProfiles.xml
 .DS_Store
 /build
 /captures
@@ -14,4 +15,4 @@
 .cxx
 local.properties
 vcs.xml
-.idea
+misc.xml
